# RUDZs-Bookshop

./: DS_Store  README.md  book.py  bookstoreDB.sql  config.json  main.html  pyproject.toml  q.py  requirements.txt  test.py
sample data files/: bookstore.sql
static/images/: 2ndbook.jfif
static/js/: 404.js
templates/: 404.html  about.html  add.html  admin.html  articles.html  author.html  author_detail.html  book_detail.html  cart.html  cngpassword.html  contact.html  dashboard.html  edit.html  featured.html  forgotpass.html  index.html  layout.html  login.html  meme.html  offer.html  popular.html  profile.html  publisher.html  publisher_detail.html  resetpass.html  search_results.html  signup.html  stationary.html  subscribe.html  table.html  verifycode.html  wishlist.html  working.html
